@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-16T08:22:13Z",
-  "count_outdated" : 663,
-  "uniques_outdated" : 376,
-  "count" : 682,
-  "uniques" : 385,
+  "timestamp" : "2022-11-16T16:20:36Z",
+  "count_outdated" : 665,
+  "uniques_outdated" : 378,
+  "count" : 683,
+  "uniques" : 386,
   "clones" : [
-    {
-      "timestamp": "2022-11-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-11-03T00:00:00Z",
       "count": 1,
