@@ -1,12 +1,7 @@
 {
-  "count": 19,
-  "uniques": 6,
+  "count": 18,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-11-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-03T00:00:00Z",
       "count": 1,
