@@ -1,3 +1,11 @@
+2022-11-16T16:20:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3481138990 # 1034
+* notice: last 14d: unq all: 5 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 376 663 / 385 682
+* notice: next accum: outdated-unq outdated-all / unq all: 378 665 / 386 683
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-02] / []
+
 2022-11-16T08:22:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3477592925 # 1033
 * notice: last 14d: unq all: 6 19
